# DLL-Injection-Example

./: CMakeLists.txt  DLL.cpp  LICENSE.md  README.md  app.cpp  text.h
model/: health.cpp  health.h
